--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"module": "main.js",
 	"description": "A Discord bot that posts announcements and updates. Note: This bot is not affiliated with Georgia State University.",
 	"engines": {
-		"node": "6.5.0"
+		"node": "12.x"
 	},
 	"scripts": {
 		"start": "node main.js",
