--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pantherbot",
-	"version": "1.0.1",
+	"version": "1.0.4",
 	"main": "index.js",
 	"module": "main.js",
 	"description": "A Discord bot that posts announcements and updates. Note: This bot is not affiliated with Georgia State University.",
@@ -36,6 +36,8 @@
 		"esm": "^3.2.25",
 		"express": "^4.17.1",
 		"fs-extra": "^3.0.1",
+		"google": "^2.1.0",
+		"googleapis": "^60.0.1",
 		"mongodb": "^3.6.2",
 		"nodemon": "^2.0.4",
 		"opusscript": "0.0.7",
