--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
 		"mongodb": "^3.6.2",
 		"nodemon": "^2.0.4",
 		"opusscript": "0.0.7",
+		"random-puppy": "^1.1.0",
 		"request": "^2.88.2",
 		"rollup": "^0.35.15",
+		"snekfetch": "^4.0.4",
 		"snoowrap": "^1.21.0",
 		"ytdl-core": "^3.3.0"
 	},
