--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "devDependencies": {},
     "dependencies": {
         "axios": "^0.20.0",
+        "canvas": "^2.5.9",
         "discord.js": "^12.4.1",
         "dotenv": "^8.2.0",
         "eslint": "^7.13.0",
         "express": "^4.17.1",
         "fs-extra": "^3.0.1",
         "mongodb": "^3.6.2",
+        "mongoose": "^5.10.15",
         "random-puppy": "^1.1.0"
     }
 }
