--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "axios": "^0.20.0",
         "canvas": "^2.5.9",
         "discord.js": "^12.4.1",
+        "discord.js-commando": "git+https://github.com/discordjs/Commando.git",
         "dotenv": "^8.2.0",
         "eslint": "^7.13.0",
         "express": "^4.17.1",
