--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "module": "main.js",
     "description": "A Discord bot that posts announcements and information. Note: This bot is not affiliated with Georgia State University.",
     "engines": {
-        "node": "15.x"
+        "node": "latest"
     },
     "scripts": {
         "postinstall": "link-module-alias",
@@ -41,16 +41,15 @@
     "type": "module",
     "devDependencies": {},
     "dependencies": {
-        "axios": "^0.20.0",
-        "canvas": "^2.5.9",
-        "discord.js": "^12.4.1",
+        "axios": "latest",
+        "discord.js": "latest",
         "discord.js-commando": "git+https://github.com/discordjs/Commando.git",
-        "dotenv": "^8.2.0",
-        "eslint": "^7.13.0",
-        "express": "^4.17.1",
-        "fs-extra": "^3.0.1",
-        "mongodb": "^3.6.2",
-        "mongoose": "^5.10.15",
-        "random-puppy": "^1.1.0"
+        "dotenv": "latest",
+        "eslint": "latest",
+        "express": "latest",
+        "fs-extra": "latest",
+        "mongodb": "latest",
+        "mongoose": "latest",
+        "random-puppy": "latest"
     }
 }
