--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "module": "main.js",
     "description": "A Discord bot that posts announcements and information. Note: This bot is not affiliated with Georgia State University.",
     "engines": {
-        "node": "latest"
+        "node": "15.x"
     },
     "scripts": {
         "start": "node main.js",
@@ -39,16 +39,16 @@
     "homepage": "https://github.com/GSUGuide21/PantherBot#readme",
     "type": "module",
     "dependencies": {
-        "axios": "latest",
-        "discord.js": "latest",
+        "axios": "^0.21.1",
+        "discord.js": "^12.5.1",
         "discord.js-commando": "git+https://github.com/discordjs/Commando.git",
-        "dotenv": "latest",
-        "eslint": "latest",
-        "express": "latest",
-        "fs-extra": "latest",
-        "module-alias": "latest",
-        "mongodb": "latest",
-        "mongoose": "latest",
-        "random-puppy": "latest"
+        "dotenv": "^8.2.0",
+        "eslint": "^7.13.0",
+        "express": "^4.17.1",
+        "fs-extra": "^9.1.0",
+        "module-alias": "^2.2.2",
+        "mongodb": "^3.6.4",
+        "mongoose": "^5.11.15",
+        "random-puppy": "^1.1.0"
     }
 }
