--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "engines": {
         "node": "15.x"
     },
+    "type": "module",
     "scripts": {
         "start": "node main.js",
         "test": "echo \"Hello World\" && exit 1"
