--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "_moduleAliases": {
         "@cmds": "cmds",
+        "@root": ".",
         "@welcome": "welcome",
         "@util": "util",
         "@schemas": "schemas"
