--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     },
     "homepage": "https://github.com/GSUGuide21/PantherBot#readme",
     "dependencies": {
+        "@mapbox/node-pre-gyp": "^1.0.1",
+        "2d-context": "^1.3.0",
         "axios": "github:axios/axios",
         "discord.js": "^12.5.1",
         "discord.js-commando": "github:discordjs/Commando",
