Making a schedule command

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@root": ".",
         "@welcome": "welcome",
         "@util": "util",
-        "@schemas": "schemas"
+        "@schemas": "schemas",
+        "@models": "models"
     },
     "repository": {
         "type": "git",
