--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
         "eslint": "^7.13.0",
         "express": "^4.17.1",
         "fs-extra": "^9.1.0",
+        "full-icu": "^1.3.1",
+        "luxon": "^1.26.0",
         "module-alias": "^2.2.2",
+        "moment": "^2.29.1",
         "mongodb": "^3.6.4",
         "mongoose": "^5.11.15",
         "random-puppy": "^1.1.0",
