--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "@welcome": "welcome",
         "@util": "util",
         "@schemas": "schemas",
-        "@models": "models"
+        "@models": "models",
+        "@features": "features"
     },
     "repository": {
         "type": "git",
