--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "fs-extra": "^9.1.0",
         "full-icu": "^1.3.1",
         "luxon": "^1.26.0",
+        "mathjs": "^9.3.0",
         "module-alias": "^2.2.2",
         "moment": "^2.29.1",
         "mongodb": "^3.6.4",
