--- a/package.json
+++ b/package.json
@@ -5,61 +5,61 @@
   "module": "main.js",
   "description": "A Discord bot that posts announcements and information. Note: This bot is not affiliated with Georgia State University.",
   "engines": {
-      "node": "15.x"
+    "node": "15.x"
   },
   "scripts": {
-      "start": "node main.js",
-      "test": "echo \"Hello World\" && exit 1"
+    "start": "node main.js",
+    "test": "echo \"Hello World\" && exit 1"
   },
   "_moduleAliases": {
-      "@cmds": "cmds",
-      "@root": ".",
-      "@welcome": "welcome",
-      "@util": "util",
-      "@schemas": "schemas",
-      "@models": "models",
-      "@features": "features"
+    "@cmds": "cmds",
+    "@root": ".",
+    "@welcome": "welcome",
+    "@util": "util",
+    "@schemas": "schemas",
+    "@models": "models",
+    "@features": "features"
   },
   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/GSUGuide21/PantherBot.git"
+    "type": "git",
+    "url": "git+https://github.com/GSUGuide21/PantherBot.git"
   },
   "keywords": [
-      "Discord",
-      "Bot",
-      "PantherBot",
-      "DiscordJS",
-      "GSUGuide21",
-      "GSU"
+    "Discord",
+    "Bot",
+    "PantherBot",
+    "DiscordJS",
+    "GSUGuide21",
+    "GSU"
   ],
   "author": {
-      "name": "GSUGuide21"
+    "name": "GSUGuide21"
   },
   "license": "MIT",
   "bugs": {
-      "url": "https://github.com/GSUGuide21/PantherBot/issues"
+    "url": "https://github.com/GSUGuide21/PantherBot/issues"
   },
   "homepage": "https://github.com/GSUGuide21/PantherBot#readme",
   "dependencies": {
-      "@mapbox/node-pre-gyp": "^1.0.1",
-      "2d-context": "^1.3.0",
-      "axios": "github:axios/axios",
-      "discord.js": "^12.5.1",
-      "discord.js-commando": "github:discordjs/Commando",
-      "dotenv": "^8.2.0",
-      "emoji-regex": "^9.2.2",
-      "eslint": "^7.13.0",
-      "express": "^4.17.1",
-      "fs-extra": "^9.1.0",
-      "full-icu": "^1.3.1",
-      "luxon": "^1.26.0",
-      "mathjs": "^9.3.0",
-      "module-alias": "^2.2.2",
-      "moment": "^2.29.1",
-      "mongodb": "^3.6.4",
-      "mongoose": "^5.11.15",
-      "random-puppy": "^1.1.0",
-      "snoowrap": "^1.22.0"
+    "@mapbox/node-pre-gyp": "^1.0.1",
+    "2d-context": "^1.3.0",
+    "axios": "github:axios/axios",
+    "discord.js": "^12.5.1",
+    "discord.js-commando": "github:discordjs/Commando",
+    "dotenv": "^8.2.0",
+    "emoji-regex": "^9.2.2",
+    "eslint": "^7.13.0",
+    "express": "^4.17.1",
+    "fs-extra": "^9.1.0",
+    "full-icu": "^1.3.1",
+    "luxon": "^1.26.0",
+    "mathjs": "^9.3.0",
+    "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.15",
+    "random-puppy": "^1.1.0",
+    "snoowrap": "^1.22.0",
+    "url-exist": "^3.0.0"
   }
 }
-
