--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
 	"engines": {
 		"node": "15.x"
 	},
-	"type": "module",
 	"scripts": {
 		"start": "node main.js",
 		"test": "echo \"Hello World\" && exit 1"
@@ -53,6 +52,8 @@
 		"express": "^4.17.1",
 		"fs-extra": "^9.1.0",
 		"full-icu": "^1.3.1",
+		"ky": "^0.26.0",
+		"ky-universal": "^0.9.1",
 		"luxon": "^1.26.0",
 		"mathjs": "^9.3.0",
 		"module-alias": "^2.2.2",
