--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
 	},
 	"homepage": "https://github.com/GSUGuide21/PantherBot#readme",
 	"dependencies": {
-		"@mapbox/node-pre-gyp": "^1.0.1",
 		"2d-context": "^1.3.0",
+		"@mapbox/node-pre-gyp": "^1.0.1",
 		"axios": "github:axios/axios",
+		"crypto": "^1.0.1",
 		"discord.js": "^12.5.1",
 		"discord.js-commando": "github:discordjs/Commando",
 		"dotenv": "^8.2.0",
@@ -60,6 +61,7 @@
 		"moment": "^2.29.1",
 		"mongodb": "^3.6.4",
 		"mongoose": "^5.11.15",
+		"node-fetch": "^2.6.1",
 		"random-puppy": "^1.1.0",
 		"snoowrap": "^1.22.0",
 		"url-exist": "^3.0.0"
