--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "pantherbot",
-	"version": "2.0.0",
+	"version": "2.0.6",
 	"main": "index.js",
 	"module": "main.js",
 	"description": "A Discord bot that posts announcements and information. Note: This bot is not affiliated with Georgia State University.",
@@ -12,13 +12,14 @@
 		"test": "echo \"Hello World\" && exit 1"
 	},
 	"_moduleAliases": {
-		"@cmds": "cmds",
 		"@root": ".",
-		"@welcome": "welcome",
-		"@util": "util",
-		"@schemas": "schemas",
-		"@models": "models",
-		"@features": "features"
+		"@client": "client",
+		"@commands": "client/commands",
+		"@features": "client/features",
+		"@models": "client/features/models",
+		"@games": "client/features/games",
+		"@responses": "client/features/responses",
+		"@util": "client/features/util"
 	},
 	"repository": {
 		"type": "git",
@@ -41,10 +42,9 @@
 	},
 	"homepage": "https://github.com/GSUGuide21/PantherBot#readme",
 	"dependencies": {
-		"@mapbox/node-pre-gyp": "^1.0.1",
 		"2d-context": "^1.3.0",
+		"@mapbox/node-pre-gyp": "^1.0.1",
 		"axios": "github:axios/axios",
-		"crypto": "^1.0.1",
 		"discord.js": "^12.5.1",
 		"discord.js-commando": "github:discordjs/Commando",
 		"dotenv": "^8.2.0",
@@ -55,7 +55,7 @@
 		"full-icu": "^1.3.1",
 		"ky": "^0.26.0",
 		"ky-universal": "^0.9.1",
-		"luxon": "^1.26.0",
+		"luxon": "^1.27.0",
 		"mathjs": "^9.3.0",
 		"module-alias": "^2.2.2",
 		"moment": "^2.29.1",
