--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"2d-context": "^1.3.0",
 		"@mapbox/node-pre-gyp": "^1.0.1",
 		"axios": "github:axios/axios",
+		"discord-buttons": "^4.0.0",
 		"discord.js": "^12.5.1",
 		"discord.js-commando": "github:discordjs/Commando",
 		"dotenv": "^8.2.0",
