--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"cheerio": "^1.0.0-rc.10",
 		"discord-buttons": "^4.0.0",
 		"discord.js": "^13.0.1",
-		"discord.js-commando": "github:discordjs/Commando",
+		"discord.js-commando": "github:iceproductions/Commando",
 		"dotenv": "^8.2.0",
 		"emoji-regex": "^9.2.2",
 		"eslint": "^7.13.0",
