--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
 	"dependencies": {
 		"2d-context": "^1.3.0",
 		"@mapbox/node-pre-gyp": "^1.0.1",
+		"@sapphire/framework": "^1.0.2",
 		"axios": "github:axios/axios",
 		"cheerio": "^1.0.0-rc.10",
+		"common-tags": "^1.8.0",
 		"discord-buttons": "^4.0.0",
 		"discord.js": "^13.0.1",
 		"discord.js-commando": "github:iceproductions/Commando",
@@ -55,6 +57,7 @@
 		"express": "^4.17.1",
 		"fs-extra": "^9.1.0",
 		"full-icu": "^1.3.1",
+		"is-promise": "^4.0.0",
 		"ky": "^0.26.0",
 		"ky-universal": "^0.9.1",
 		"luxon": "^1.27.0",
@@ -65,6 +68,7 @@
 		"mongoose": "^5.11.15",
 		"node-fetch": "^2.6.1",
 		"random-puppy": "^1.1.0",
+		"require-all": "^3.0.0",
 		"snoowrap": "^1.22.0",
 		"url-exist": "^3.0.0"
 	}
